# spin-hub-cli

./: .gitignore  Cargo.toml  README.md  spin-pluginify.toml
src/: commands.rs  git.rs  hub_api.rs  main.rs  spin.rs
src/commands/: clone.rs  install_plugin.rs  new.rs  run.rs  search.rs
