[package]
name = "hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
comfy-table = "7.1.0"
dialoguer = "0.11.0"
itertools = "0.12.0"
reqwest = "0.11.22"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
spin-templates = { git = "https://github.com/itowlson/spin", branch = "empublicen-all-the-things" }
tempfile = "3.8.0"
thiserror = "1.0.50"
tokio = { version = "1.23", features = ["full"] }
url = "2.5.0"
